--- a/about.html
+++ b/about.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>About Me</title>
+    <title>About Me - Karla B.</title>
+    <meta name="description" content="Get to know me more by reading all things about me.">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="src/styles.css" />
@@ -24,18 +25,18 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                  <a class="nav-link" aria-current="page" href="index.html" title="Home">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="about.html">About Me</a>
+                  <a class="nav-link active" href="about.html" title="Information about me">About Me</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html#contact">Contact Me</a>
+                  <a class="nav-link" href="about.html#contact" title="Contact me">Contact Me</a>
                 </li>
               </ul>
             </div>
           </div>
-    </nav>
+      </nav>
 
     <h1>
       About Me
@@ -44,7 +45,7 @@
       🤠Shecodes student from Lubbock, Texas
     </h3>
 
-    <div class="info">
+    <div class="info" title="read more about me">
       <span>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
@@ -58,13 +59,13 @@
     <div class="container mb-5">
       <div class="row">
         <div class="col-sm-4">
-          <img src="images/yoga.png" class="img-fluid border p-2 shadow-lg" />
+          <img src="images/yoga.png" class="img-fluid border p-2 shadow-lg" alt="yoga site"/>
         </div>
         <div class="col-sm-4">
-          <img src="images/weather.png" class="img-fluid border p-2 shadow-lg" />
+          <img src="images/weather.png" class="img-fluid border p-2 shadow-lg" alt="weather forecast site"/>
         </div>
         <div class="col-sm-4">
-          <img src="images/yogurt.png" class="img-fluid border p-2 shadow-lg" />
+          <img src="images/yogurt.png" class="img-fluid border p-2 shadow-lg" alt="yogurt site"/>
         </div>
       </div>
     </div>
@@ -73,6 +74,6 @@
     📮 Contact me
   </h2>
 </br>
-      <a href="mailto:kmrbernal@gmail.com" id="contact" class="email">kmrbernal@gmail.com</a>
+      <a href="mailto:kmrbernal@gmail.com" id="contact" class="email" title="email address">kmrbernal@gmail.com</a>
   </body>
 </html>
