--- a/index.html
+++ b/index.html
@@ -9,31 +9,32 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-    <title>SheCodes</title>
+    <title>Karla B. Portfolio</title>
+    <meta name="description" content="A personal website/portfolio of an aspiring Frontend Developer.">
   </head>
   <body>
     
-        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top mb-5">
-              <div class="container">
-                <a class="navbar-brand" href="#">Karla Bernal</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                  <ul class="navbar-nav">
-                    <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="about.html">About Me</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="about.html#contact">Contact Me</a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-        </nav>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top mb-5 ">
+      <div class="container">
+        <a class="navbar-brand" href="#">Karla Bernal</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="index.html" title="Home">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="about.html" title="Information about me">About Me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html#contact" title="Contact me">Contact Me</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
         <h2>
           👋 Hi I am
@@ -46,20 +47,20 @@
         </h3>
       </br>
       <div class="links mb-5">
-        <a href="about.html#contact" class="contact">Contact Me</a>
-        <a href="about.html" class="about">About Me</a>
+        <a href="about.html#contact" class="contact" title="contact me">Contact Me</a>
+        <a href="about.html" class="about" title="learn more about me">About Me</a>
       </div>
 
       <div class="container">
         <div class="row mb-5">
           <div class="col-sm-6">
-            <img src="images/yoga.png" class="img-fluid" />
+            <img src="images/yoga.png" class="img-fluid" alt="yoga site"/>
           </div>
           <div class="col-sm-6 text-start">
             <h2 class="mb-2"> Yoga app </h2>
             <p class="mb-5"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.
             </p>
-            <a href="#" class="app-links text-decoration-none border shadow p-3 rounded">Launch Yoga App</a>
+            <a href="#" class="app-links text-decoration-none border shadow p-3 rounded" title="open yoga app">Launch Yoga App</a>
           </div>
         </div>
 
@@ -68,22 +69,22 @@
             <h2 class="mb-2"> Weather app </h2>
             <p class="mb-5"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.
             </p>
-            <a href="#" class="app-links text-decoration-none border shadow p-3 rounded">Launch Weather App</a>
+            <a href="#" class="app-links text-decoration-none border shadow p-3 rounded" title="open weather forecast app">Launch Weather App</a>
           </div>
           <div class="col-sm-6 mt-5">
-            <img src="images/weather.png" class="img-fluid" />
+            <img src="images/weather.png" class="img-fluid" alt="Weather forecast site"/>
           </div>
         </div>
 
         <div class="row mb-5">
           <div class="col-sm-6">
-              <img src="images/yogurt.png" class="img-fluid" />
+              <img src="images/yogurt.png" class="img-fluid" alt="yogurt site"/>
           </div>
           <div class="col-sm-6 text-start">
             <h2 class="mb-2"> Yogurt app </h2>
             <p class="mb-5"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.
             </p>
-            <a href="#" class="app-links text-decoration-none border shadow p-3 rounded">Launch Yogurt App</a>
+            <a href="#" class="app-links text-decoration-none border shadow p-3 rounded" title="open yogurt app">Launch Yogurt App</a>
           </div>
         </div>
       </div>
