added some media queries

--- a/about.html
+++ b/about.html
@@ -69,11 +69,12 @@
         </div>
       </div>
     </div>
-  
-  <h2>
-    📮 Contact me
-  </h2>
+    <div class="mb-5">
+      <h2>
+      📮 Contact me
+      </h2>
 </br>
-      <a href="mailto:kmrbernal@gmail.com" id="contact" class="email" title="email address">kmrbernal@gmail.com</a>
+        <a href="mailto:kmrbernal@gmail.com" id="contact" class="email" title="email address">kmrbernal@gmail.com</a>
+    </div>
   </body>
 </html>
