--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav ms-left-aligned">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html" title="Home">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html" title="Home">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="about.html" title="Information about me">About Me</a>
+              <a class="nav-link" href="about.html" title="Information about me">About Me</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html#contact" title="Contact me">Contact Me</a>
@@ -51,7 +51,7 @@
         <a href="about.html" class="about" title="learn more about me">About Me</a>
       </div>
 
-      <div class="container">
+      <div class="container projects">
         <div class="row mb-5">
           <div class="col-sm-6">
             <img src="images/yoga.png" class="img-fluid" alt="yoga site"/>
