--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
+              <ul class="navbar-nav ms-left-aligned">
                 <li class="nav-item">
                   <a class="nav-link" aria-current="page" href="index.html" title="Home">Home</a>
                 </li>
@@ -38,7 +38,7 @@
           </div>
       </nav>
 
-    <h1>
+    <h1 class="about-heading">
       About Me
     </h1>
     <h3>
