--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
       </div>
     </nav>
 
-        <h2>
+        <h2 class="greeting">
           👋 Hi I am
         </h2>
-        <h1>
+        <h1 class="name">
           Karla Bernal
         </h1>
         <h3>
