updated links to "/"

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-left-aligned">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html" title="Home">Home</a>
+              <a class="nav-link active" aria-current="page" href="/" title="Home">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html" title="Information about me">About Me</a>
+              <a class="nav-link" href="/about.html" title="Information about me">About Me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact" title="Contact me">Contact Me</a>
+              <a class="nav-link" href="/about.html#contact" title="Contact me">Contact Me</a>
             </li>
           </ul>
         </div>
@@ -47,14 +47,14 @@
         </h3>
       </br>
       <div class="links mb-5">
-        <a href="about.html#contact" class="contact" title="contact me">Contact Me</a>
-        <a href="about.html" class="about" title="learn more about me">About Me</a>
+        <a href="/about.html#contact" class="contact" title="contact me">Contact Me</a>
+        <a href="/about.html" class="about" title="learn more about me">About Me</a>
       </div>
 
       <div class="container projects">
         <div class="row mb-5">
           <div class="col-sm-6">
-            <img src="images/yoga.png" class="img-fluid" alt="yoga site"/>
+            <img src="/images/yoga.png" class="img-fluid" alt="yoga site"/>
           </div>
           <div class="col-sm-6 text-start">
             <h2 class="mb-2"> Yoga app </h2>
@@ -72,13 +72,13 @@
             <a href="#" class="app-links text-decoration-none border shadow p-3 rounded" title="open weather forecast app">Launch Weather App</a>
           </div>
           <div class="col-sm-6 mt-5">
-            <img src="images/weather.png" class="img-fluid" alt="Weather forecast site"/>
+            <img src="/images/weather.png" class="img-fluid" alt="Weather forecast site"/>
           </div>
         </div>
 
         <div class="row mb-5">
           <div class="col-sm-6">
-              <img src="images/yogurt.png" class="img-fluid" alt="yogurt site"/>
+              <img src="/images/yogurt.png" class="img-fluid" alt="yogurt site"/>
           </div>
           <div class="col-sm-6 text-start">
             <h2 class="mb-2"> Yogurt app </h2>
