--- a/about.html
+++ b/about.html
@@ -25,13 +25,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ms-left-aligned">
                 <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="index.html" title="Home">Home</a>
+                  <a class="nav-link" aria-current="page" href="/" title="Home">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="about.html" title="Information about me">About Me</a>
+                  <a class="nav-link active" href="/about.html" title="Information about me">About Me</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html#contact" title="Contact me">Contact Me</a>
+                  <a class="nav-link" href="/about.html#contact" title="Contact me">Contact Me</a>
                 </li>
               </ul>
             </div>
@@ -59,13 +59,13 @@
     <div class="container mb-5">
       <div class="row">
         <div class="col-sm-4">
-          <img src="images/yoga.png" class="img-fluid border p-2 shadow-lg" alt="yoga site"/>
+          <img src="/images/yoga.png" class="img-fluid border p-2 shadow-lg" alt="yoga site"/>
         </div>
         <div class="col-sm-4">
-          <img src="images/weather.png" class="img-fluid border p-2 shadow-lg" alt="weather forecast site"/>
+          <img src="/images/weather.png" class="img-fluid border p-2 shadow-lg" alt="weather forecast site"/>
         </div>
         <div class="col-sm-4">
-          <img src="images/yogurt.png" class="img-fluid border p-2 shadow-lg" alt="yogurt site"/>
+          <img src="/images/yogurt.png" class="img-fluid border p-2 shadow-lg" alt="yogurt site"/>
         </div>
       </div>
     </div>
